--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,8 +3,9 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: 
+      - "master"
 
 jobs:
   deploy:
@@ -20,7 +21,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel
     - name: Rebuild package
       run: |
         python setup.py sdist bdist_wheel
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Apply python package update
