--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Rebuild package
       run: |
         python3 setup.py sdist bdist_wheel
-    # - uses: stefanzweifel/git-auto-commit-action@v4
-    #   with:
-    #     commit_message: Apply python package update
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Apply python package update
