--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
   push:
     branches: 
-      - 'master'
+      - "master"
 
 jobs:
   deploy:
@@ -16,8 +16,8 @@ jobs:
     # Install and setup Linux environment
     steps:
     - uses: actions/checkout@v2
-      with:
-        # ref: ${{ github.head_ref }}
+#       with:
+#         ref: ${{ github.head_ref }}
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
