--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,8 +16,8 @@ jobs:
     # Install and setup Linux environment
     steps:
     - uses: actions/checkout@v2
-#       with:
-#         ref: ${{ github.head_ref }}
+      with:
+        ref: ${{ github.head_ref }}
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -42,4 +42,3 @@ jobs:
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Apply python package update
-        branch: release
